solve problem with redundant wrapper for navs, centering all navbar elements, work on show-up nav items suitable on small screens

--- a/frontend/components/Nav/Nav.less
+++ b/frontend/components/Nav/Nav.less
@@ -4,12 +4,16 @@
   width: 100%;
   height: 1em;
   position: absolute;
+  padding: 0 5%;
   background-color: transparent;
   color: @main-text-color;
   font: bold @fontSize 'Honey Script';
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+
+    &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
 }
 
 .navbar_fixed {
@@ -24,10 +28,12 @@
 }
 
 .logo {
+
   .fontSize(50, 100);
   font: normal @fontSize 'Honey Script';
   transition: color .4s ease-out;
   cursor: pointer;
+  float: left;
 
   &::selection {
     &:extend(.selected-text);
@@ -35,24 +41,35 @@
 }
 
 .navbar__logo {
+  position: relative;
+  &:extend(.centering-vertical);
 }
 
 .navs-wrapper {
   display: flex;
   align-items: center;
+  flex-wrap: nowrap;
+}
+
+.navbar__navs {
+  position: relative;
+  &:extend(.centering-vertical);
 }
 
 .navs {
+  float: right;
   display: flex;
   align-items: center;
-
   .fontSize(14, 100);
   font: normal @fontSize 'Open Sans', sans-serif;
   list-style: none;
+
   // need this cause of initial value
   -webkit-padding-start: 0;
+  -webkit-margin-before: 0;
+  -webkit-margin-after: 0;
 
-  @media (max-width: 320px) {
+  @media (min-width: 320px) and (max-width: 655px) {
     flex-direction: column;
   }
 }
@@ -78,6 +95,11 @@
     opacity: .2;
     visibility: hidden;
   }
+
+  @media (max-width: 320px) {
+    padding: 0;
+    // visibility: hidden;
+  }
 }
 
 .navs__link {
@@ -93,15 +115,15 @@
 }
 
 .navbar-toggle-wrapper {
+  position: relative;
+  &:extend(.centering-vertical);
+
+  float: right;
   .fontSize(45, 100);
   width: @fontSize;
   height: 36 / 100 * 1em; // need to do this, cause the @fontSize var is already exist
   padding: 10 / 100 * 1em;
   cursor: pointer;
-
-  @media (max-width: 320px) {
-    align-self: stretch;
-  }
 }
 
 .navbar-toggle {
@@ -139,7 +161,7 @@
   &:extend(.dash-transition-transform);
 }
 
-.navbar-toggle__dash_middle_conter-clockwise {
+.navbar-toggle__dash_middle_counter-clockwise {
   transform: translateY(-50%)
     rotateZ(-45deg);
   &:extend(.dash-transition-transform);
