--- a/frontend/styles/common.less
+++ b/frontend/styles/common.less
@@ -19,3 +19,9 @@ html {
   color: @info-text-color;
   background-color: @main-text-color;
 }
+
+.centering-vertical {
+  top: 50%;
+  transform: translate3d(0, -50%, 0);
+  transform-style: preserve-3d;
+}
